# ROSCrypto

./: .gitignore  LICENSE.md  README.md
DockerCrypto/: docker-compose.yml
DockerCrypto/node_alice/: CMakeLists.txt  Dockerfile  NodeAlice.cpp  entrypoint.sh
DockerCrypto/node_alice/include/: CharacterAnalyzer.hpp
DockerCrypto/node_bob/: CMakeLists.txt  Dockerfile  NodeBob.cpp  entrypoint.sh  key_generator.srv
DockerCrypto/node_bob/include/: MessageArchive.hpp
DockerCrypto/node_keyauthority/: CMakeLists.txt  Dockerfile  KeyAuthority.cpp  cipher.msg  entrypoint.sh
src/ros_crypto/: CMakeLists.txt  crypto_communication.launch  crypto_generation.launch  crypto_unified.launch  package.xml
src/ros_crypto/include/ros_crypto/: Crypto.hpp  ElementProtocol.hpp  MultiSequence.hpp  MultiSequenceComponents.hpp
src/ros_crypto/src/: KeyAuthority.cpp  NodeAlice.cpp  NodeBob.cpp
src/symmetric_key_crypto/: CMakeLists.txt  bidirectional_symmetric_key_crypto.launch  crypto_communication.launch  crypto_generation.launch  crypto_unified.launch  package.xml  symmetric_key_crypto.launch  vector_symmetric_key_crypto.launch
src/symmetric_key_crypto/include/symmetric_key_crypto/: Determinant.hpp  ElementSequence.hpp  Matrix.hpp  TempKeyArchive.hpp  VectorHandler.h
src/symmetric_key_crypto/msg/: cipher_array.msg
src/symmetric_key_crypto/src/: Alternate_Node_Alice.cpp  Alternate_Node_Bob.cpp  Array_Node_Alice.cpp  Array_Node_Bob.cpp  KeyAuthority.cpp  NodeAlice.cpp  NodeBob.cpp  Node_Alice.cpp  Node_Bob.cpp
